@@ -1,39 +1,0 @@
-# Plugin messages
-hearthstone.description: Simple multiworld homes.
-hearthstone.worldguard-hooked: Using {0}.
-
-# SetCommand localisation
-setcommand.name: set
-setcommand.description: Set a home in the world.
-setcommand.use.name: set
-setcommand.use.description: Allow a player to set their own home.
-setcommand.usage: [player]
-setcommand.own.name: own
-setcommand.own.description: Allow this player to set homes their own home.
-setcommand.others.name: others
-setcommand.others.description: Allow this player to set homes for others.
-setcommand.not-allowed-to-build-here: &REDYou may not set a home here.
-setcommand.home-set: &GREENA new home has been created.
-setcommand.home-set-others: &GREENSet home for &YELLOW{0}.
-setcommand.location-is-obstructed: &REDThis location is obstructed.
-
-# TeleportCommand localisation
-teleportcommand.name: teleport
-teleportcommand.description: Teleport to a home in the world
-teleportcommand.use.name: teleport
-teleportcommand.use.description: Allow a player to teleport to their own home.
-teleportcommand.usage: [player] [world]
-teleportcommand.own.name: own
-teleportcommand.own.description: Allow this player to teleport to their home.
-teleportcommand.others.name: others
-teleportcommand.others.description: Allow this player to teleport to other people's homes.
-teleportcommand.cooldown.name: cooldown
-teleportcommand.cooldown.description: Force this player to wait between teleporting.
-teleportcommand.home-is-obstructed: &YELLOWThat home is currently obstructed.
-teleportcommand.cooldown-not-expired: &REDYou may not teleport for another {0}.
-teleportcommand.no-home-set: &GREEN{0} &YELLOWdoes not have a home yet.
-teleportcommand.teleported-home: &GREENTeleported to the home belonging to &YELLOW{0}&GREEN.
-teleportcommand.can-only-teleport-to-own-home: &YELLOWYou may only teleport to your own home.
-teleportcommand.invalid-world: &REDThe world you specified does not exist!
-teleportcommand.world-must-be-loaded: &REDYou may only use worlds which are currently loaded
-teleportcommand.teleport-warmup: &YELLOWYou will teleport in &GREEN{0}; &YELLOWdo not move.
